general css rettelser done

--- a/svoemmehal.html
+++ b/svoemmehal.html
@@ -23,6 +23,16 @@
     </head>
 
     <main>
+        <div>
+            <img src="stortbassin.webp" alt="Billede af stortbassin">
+            <h1>Svømmehal</h1>
+            <p>Dyk ned i vores moderne svømmehal med stort bassin til træning, lille bassin til leg – og et dejligt
+                varmtvandsbassin
+                til total afslapning. Perfekt til både seriøse sportsudøvere og familier, der vil have det sjovt sammen.
+                Her finder du
+                plads til motion, ro og gode oplevelser for alle.</p>
+            <button>Bliv medlem</button>
+        </div>
     </main>
 
     <footer>
