--- a/omidraetscenter.html
+++ b/omidraetscenter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
@@ -19,10 +19,257 @@
 
 <body>
 
-    <head>
-    </head>
+    <header>
+    </header>
 
     <main>
+        <div class="blue">
+            <h2>Om Idrætscenter Midtfyn</h2>
+        </div>
+        <h3>Hvad leder du efter?</h3>
+        <div class="grid-1-1-m">
+            <div class="grid-1-1-1-t">
+                <div>
+                    <a href="#person">
+                        <button>Personale</button>
+                    </a>
+                </div>
+                <div>
+                    <a href="#best">
+                        <button>Bestyrelse</button>
+                    </a>
+                </div>
+                <div>
+                    <a href="#caf">
+                        <button>Åbningstider</button>
+                    </a>
+                </div>
+            </div>
+            <div class="grid-1-1-t">
+                <div>
+                    <button>Arrangementer</button>
+                </div>
+                <div>
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp?f=skiftprefix" target="_blank"
+                        rel="noopener noreferrer">
+                        <button>Booking</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="blue">
+            <div class="grid-1-1-1-b">
+                <div>
+                    <h2>VISION</h2>
+                    <p>Idrætscenter Midtfyns vision er at skabe udbud af idrætsfaciliteter for foreninger og borgere, så
+                        vi
+                        bliver
+                        det
+                        naturlige valg, når der skal dyrkes idræt på Midtfyn. Vores mål er at øge andelen af borgere der
+                        udøver
+                        sport, eller som
+                        dyrker motions- eller eliteidræt, i et sundt træningsmiljø, og som derigennem forbedrer det
+                        fysiske
+                        og
+                        mentale velvære.</p>
+                </div>
+                <div>
+                    <h2>MISSION</h2>
+                    <p>Idrætscenter Midtfyn tilbyder tidssvarende og trygge rammer samt fleksible idrætsfaciliteter til
+                        sport,
+                        motion og
+                        bevægelse - og ønsker at sikre en ligeværdig fordeling af disse mellem Midtfyns mange borgere og
+                        foreninger.
+                    </p>
+                </div>
+                <div>
+                    <h2>VÆRDIER</h2>
+                    <ul>
+                        <li>Sammenhold og dialog.</li>
+                        <li>Respekt og loyalitet.</li>
+                        <li>Bevægelse og sundhed.</li>
+                        <li>Miljø- og klimabevidsthed.</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <section id="person">
+            <div class="personale">
+                <h2>
+                    Personale
+                </h2>
+                <div class="grid-1-1-1">
+                    <div>
+                        <img class="pbbillede" src="img/Espen.webp" alt="Billede af Espen">
+                        <h3>Espen Pettersson</h3>
+                        <ul>
+                            <li class="bold">Centerchef</li>
+                            <li>Tlf.: 51 32 21 51</li>
+                            <li>E-mail: ep@icmidtfyn.dk</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Soren.webp" alt="Billede af Søren">
+                        <h3>Søren Nielsen</h3>
+                        <ul>
+                            <li class="bold">Pedel</li>
+                            <li>Tlf.: 20 10 19 45</li>
+                            <li>E-mail: sn@icmidtfyn.dk</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Martin.webp" alt="Billede af Martin">
+                        <h3>Martin Jæger Grønnemose</h3>
+                        <ul>
+                            <li class="bold">Livredder</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Carina.webp" alt="Billede af Carina">
+                        <h3>Carina Dahl Jørgensen</h3>
+                        <ul>
+                            <li class="bold">Fitnesschef</li>
+                            <li>Barsel frem til september 2026</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Marlene.webp" alt="Billede af Marlene">
+                        <h3>Marlene Siehr</h3>
+                        <ul>
+                            <li class="bold">Daglig leder fitness</li>
+                            <li>Tlf.: 66 46 56 34</li>
+                            <li>E-mail: ms@icmidtfyn.dk</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Linda.webp" alt="Billede af Linda">
+                        <h3>Linda Vestergaard</h3>
+                        <ul>
+                            <li class="bold">Café/Reception ansvarlig</li>
+                            <li>Tlf.: 51 34 21 51</li>
+                            <li>E-mail: lv@icmidtfyn.dk</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Jasmati.webp" alt="Billede af Jasmati">
+                        <h3>Jasmati Subba</h3>
+                        <ul>
+                            <li class="bold">Servicemedarbejder</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Dan.webp" alt="Billede af Dan">
+                        <h3>Dan Ti</h3>
+                        <ul>
+                            <li class="bold">Servicemedarbejder</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="best">
+            <div class="Bestyrelse">
+                <h2>
+                    Bestyrelsen
+                </h2>
+                <div class="grid-1-1-1">
+                    <div>
+                        <img class="pbbillede" src="img/Jesper.webp" alt="Billede af Jesper">
+                        <h3>Jesper Desmareth</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesformand</li>
+                            <li>ERP-Konsulent</li>
+                            <li>BDL</li>
+                            <li>Ringe</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Per.webp" alt="Billede af Per">
+                        <h3>Per Jørgensen</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Advokat (H)</li>
+                            <li>Advokatselskabet Per Jørgensen ApS</li>
+                            <li>Odense</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Tove.webp" alt="Billede af Tove">
+                        <h3>Tove Bebe Clausen</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Hvidvaskcontroller</li>
+                            <li>Rise Sparekasse</li>
+                            <li>Ringe</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Casper.webp" alt="Billede af Casper">
+                        <h3>Casper Jusslin</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Group Compliance Manager</li>
+                            <li>Kompan GLOBAL</li>
+                            <li>Årslev</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Susie.webp" alt="Billede af Susie">
+                        <h3>Susie Bebe Killerup</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Kommunikations- og marketingskonsulent</li>
+                            <li>Tekniq Arbejdsgiverne</li>
+                            <li>Ringe</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Johnny.webp" alt="Billede af Johnny">
+                        <h3>Johnny Vaaben Johansen</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Sportsleder & Kostskoleleder</li>
+                            <li>Skolerne i Oure</li>
+                            <li>Ringe</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="pbbillede" src="img/Bo.webp" alt="Billede af Bo">
+                        <h3>Bo Johansen</h3>
+                        <ul>
+                            <li class="bold">Bestyrelsesmedlem</li>
+                            <li>Facility Manager</li>
+                            <li>Odense Bys Museer</li>
+                            <li>Ringe</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="caf">
+            <div class="cafe">
+                <div class="grid-1-1-c">
+                    <div>
+                        <img class="cafebillede" src="img/cafe+reception.webp" alt="Billede af cafe">
+                    </div>
+                    <div>
+                        <h2>Åbningstider for café og reception</h2>
+                        <P>Åbent alle hverdage kl. 8.00 – 13.00 og kl. 16.00 - 20.00
+                            Weekend, helligdage og i skolernes ferier efter behov.
+
+                        <div class="bold">OBS! LUKKET i perioden mandag, den 22. december 2025 - fredag, 2. januar 2026.
+                        </div>
+                        </P>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
