svommehal start done

--- a/svoemmehal.html
+++ b/svoemmehal.html
@@ -18,20 +18,137 @@
 </head>
 
 <body>
-
-    <head>
-    </head>
+    <header>
+    </header>
 
     <main>
-        <div>
-            <img src="stortbassin.webp" alt="Billede af stortbassin">
-            <h1>Svømmehal</h1>
-            <p>Dyk ned i vores moderne svømmehal med stort bassin til træning, lille bassin til leg – og et dejligt
-                varmtvandsbassin
-                til total afslapning. Perfekt til både seriøse sportsudøvere og familier, der vil have det sjovt sammen.
-                Her finder du
-                plads til motion, ro og gode oplevelser for alle.</p>
-            <button>Bliv medlem</button>
+        <div class="svommehal">
+            <div class="svommehal_img">
+                <img src="img/stortbassin.webp" alt="Billede af stortbassin">
+            </div>
+            <div class="svommehal_info">
+                <div id="svommehal_h1">
+                    <h1>Svømmehal</h1>
+                </div>
+                <div class="svommehal_text">
+                    <p>Dyk ned i vores moderne svømmehal med stort bassin til træning, lille bassin til leg – og et
+                        dejligt
+                        varmtvandsbassin
+                        til total afslapning. Perfekt til både seriøse sportsudøvere og familier, der vil have det sjovt
+                        sammen.
+                        Her finder du
+                        plads til motion, ro og gode oplevelser for alle.</p>
+                    <div class="cta_svommehal">
+                        <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp?f=skiftprefix" target="_blank"
+                            rel="noopener noreferrer">
+                            <button>BLIV MEDLEM</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="svommehal_grid_1_1_1">
+            <div id="svommehal_streg1" class="svommehal_ctaknapper">
+                <img src="img/pengeikon.webp" alt="ikon">
+                <p>Her kan du finde priser på svømmehallen:</p>
+                <div class="cta_svommehal">
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp" target="_blank"
+                        rel="noopener noreferrer">
+                        <button>PRISER</button>
+                    </a>
+                </div>
+            </div>
+            <div id="svommehal_streg2" class="svommehal_ctaknapper">
+                <img src="img/baderegler.webp" alt="ikon">
+                <p>Baderegler er vigitge! <br>Her kan du finde dem og læse om dem:</p>
+                <div class="cta_svommehal">
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp" target="_blank"
+                        rel="noopener noreferrer">
+                        <button>BADEREGLER</button>
+                    </a>
+                </div>
+            </div>
+            <div class="svommehal_ctaknapper">
+                <img src="img/urikon.webp" alt="ikon">
+                <p>Her kan du se de gældende åbningstider for svømmehalen:</p>
+                <div class="cta_svommehal">
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp" target="_blank"
+                        rel="noopener noreferrer">
+                        <button>ÅBNINGSTIDER</button>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="svommefaciliteter_grid">
+            <div class="svommehal_faciliteter_img">
+                <img src="img/svømmehal2.webp" alt="svømmehal">
+            </div>
+            <div class="svommefaciliteter">
+                <div class="faciliteter_h2">
+                    <h2>Svømmefaciliteter</h2>
+                </div>
+                <div class="faciliteter_text">
+                    <h3>Det lille bassin</h3>
+                    <ul>
+                        <li>Det lille bassin måler 8 x 12,5 m.</li>
+                        <li>Dybden er på 90 cm i hele bassinet.</li>
+                        <li>Vandtemperaturen er 30 grader.</li>
+                    </ul>
+                    <h3>Det store bassin</h3>
+                    <ul>
+                        <li>Det store bassin måler 25 x 12,5 m.</li>
+                        <li>Der er 6 baner med en dybde fra 115 til 170 cm.</li>
+                        <li>Vandet er 27 grader.</li>
+                        <li>Lufttemperaturen er 27 grader.</li>
+                    </ul>
+                    <h3>Varmtvandsbassin</h3>
+                    <ul>
+                        <li>Varmtvandsbassinet måler 8 x 11 m.</li>
+                        <li>Dybden er mellem 130 og 140 cm.</li>
+                        <li>Vandet er 33 grader.</li>
+                        <li>Lufttemperaturen er 35 grader.</li>
+                        <li>Der forefindes 3 sæt massagedyser som er aktive hvert femte minut.</li>
+                        <li>Varmtvandsbassinet er en stillezone.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="svommehal_regler">
+            <div>
+                <h2>Aflåste skabe</h2>
+                <ul class="aflaasteskabe_text">
+                    <li>Skabene i omklædningsrummene kan aflåses med et ICM medlemsarmbånd, som kan købes i receptionen
+                        for kr. 100,-.</li>
+                    <li>Vi anbefaler, at du opbevarer sko, tøj og værdigenstande i det aflåste skab, da vi ikke
+                        erstatter bortkomne genstande.</li>
+                </ul>
+            </div>
+            <div class="obs_text">
+                <h2>OBS!</h2>
+                <p>Der kan forekomme dage, hvor svømmehallen er lukket eller har ændret åbningstider på grund af
+                    helligdage, teknisk service, svømmestævner eller andre arrangementer.</p>
+            </div>
+        </div>
+
+        <div class="svommehal_grid_1_05_1">
+            <div class="lej_svommehal_img">
+                <img src="img/varmvandsbassin.webp" alt="varmtvandsbassin">
+            </div>
+            <div class="lej_svommehal">
+                <h2>Leje af svømmehal</h2>
+                <p>På vores halbooking system finder du oversigt over ledige tider i svømmehallen - klik på nedenstående
+                    link for at leje svømmehallen:</p>
+                <div class="cta_svommehal">
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/default.asp" target="_blank"
+                        rel="noopener noreferrer">
+                        <button>LEJ SVØMMEHAL</button>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 
