fittness_version1_done

--- a/fitness.html
+++ b/fitness.html
@@ -22,9 +22,128 @@
     </header>
 
     <main>
+        <section class="fitness_del1">
+            <img src="img/fitness1.webp" alt="fitness">
+            <div class="fitness_lyseblaa">
+                <h1> Fitness </h1>
+                <p> Træd ind i et fitnesscenter med 650 m² fyldt med alt fra styrke- og konditionsudstyr til
+                    inspirerende
+                    holdtræningslokaler. Her får du plads til både intensiv træning, varierede hold og personlig
+                    udvikling, uanset
+                    niveau. Et træningsmiljø skabt til dig, der vil have kvalitet, motivation og de bedste rammer samlet
+                    ét sted.</p>
+                <div class="fitness_knap1">
+                    <a href="https://www.icmidtfyn.dk/priser" target="_blank" rel="noopener noreferrer"> <button> PRISER
+                        </button> </a>
+                    <a href="https://icmidtfyn.halbooking.dk/newlook/proc_opretkonto.asp" target="_blank"
+                        rel="noopener noreferrer"> <button> BLIV MEDLEM
+                        </button> </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="fitness_del2">
+            <div class="fitness_streg">
+                <img src="img/fitness2.webp" alt="fitness">
+                <p>Her kan du se de gældende åbningstider for fitnesscenteret:</p>
+                <a href="#fitness_tider"><button> SE ÅBNINGSTIDER </button></a>
+            </div>
+            <div class="fitness_streg">
+                <img src="img/fitness3.webp" alt="fitness">
+                <p>Idrætscenter Midtfyn har fokus på bredden og søger at have hold til alle målgrupper, med vores 48
+                    forskellige hold</p>
+                <a href="https://www.icmidtfyn.dk/holdtrning" target="_blank" rel="noopener noreferrer"><button>
+                        HOLDTRÆNING </button></a>
+            </div>
+            <div class="fitness_streg2">
+                <img src="img/fitness4.webp" alt="fitness">
+                <p>Påtænker du at blive medlem i Idrætscenter Midtfyn og komme i gang med at træne på et af vores hold?
+                </p>
+                <a href="https://www.icmidtfyn.dk/prvetime" target="_blank" rel="noopener noreferrer"><button>
+                        PRØVETRÆNING </button></a>
+            </div>
+        </section>
+        <section class="fitness_del3">
+            <img src="img/fitness5.webp" alt="fitness">
+            <div>
+                <h2>Træningsfaciliteter </h2>
+                <p>I vores fitnesscenter finder du et bredt udvalg af maskiner og frivægter til at træne hele kroppen.
+                    Hvis du gerne vil se
+                    nærmere på vores udstyr så kom op og få en rundvisning.</p>
+            </div>
+        </section>
+        <section class="fitness_del4">
+            <h2> Andre faciliteter </h2>
+            <div class="fitness_del4_1">
+                <img src="img/fitness6.webp" alt="padel">
+                <div class="fitness_del4_tekst">
+                    <h3> Padel</h3>
+                    <p class="bolde"> Bolde </p>
+                    <p>Der vil være mulighed for at låne 3 bolde på hver bane. Boldene er ikke nye, men brugte bolde.
+                        Ønsker man at købe bolde
+                        kan det gøres i vores café i åbningstiden. Et rør bolde koster 50,-.</p>
+                    <p class="bat">Bat</p>
+                    <p>Der vil være brugte bat på banen, som du kan låne.</p>
+                </div>
+            </div>
+
+            <div class="fitness_del4_2">
+                <img src="img/fitness7.webp" alt="sauna">
+                <div class="fitness_del4_tekst">
+                    <h3> Infrarød sauna</h3>
+                    <p> En infrarød sauna afgiver stråler der varmer langt ind i din krop. Varmen trænger gennem led,
+                        muskler og væv, og varmer
+                        hele kroppen op. Saunastrålerne har en behagelig temperatur, og du vil føle et fantastisk
+                        velvære efterfølgende. </p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="fitness_del5">
+            <div class="fitness_del5_1">
+                <img src="img/fitness8.webp" alt="dør">
+                <div>
+                    <h2 id="fitness_tider">Fitnesscenterets Åbningstider</h2>
+                    <h3> Åbent alle dage kl. 4 - 22</h3>
+                    <h3 class="fitness_h3_bold">OBS! Sidste check-in kl. 21</h3>
+                    <p>Indgang uden for centerets åbningstider:
+                        Såfremt du møder en låst fordør, uden for idrætscenterets åbningstid, kan du få adgang til
+                        fitnesscentret via døren til
+                        højre for indgangspartiet på forsiden af Idrætscentret, hvor du kan låse dig ind med dit
+                        medlemsarmbånd.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
+        <section class="footer">
+            <div>
+                <a href="https://www.google.com/maps/place/S%C3%B8vej+34,+5750+Ringe/@55.2412148,10.4633833,2125m/data=!3m2!1e3!4b1!4m6!3m5!1s0x464d25e80744cb5b:0xbead35b71a7fe716!8m2!3d55.241203!4d10.473683!16s%2Fg%2F11nnv8gs39?entry=ttu&g_ep=EgoyMDI1MTIwOC4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank" rel="noopener noreferrer" class="footer_box" id="footer_link">
+                    <img src="img/maps.webp" alt="Google Maps icon">
+                    <div>
+                        <p>Søvej 34</p>
+                        <p>5750 Ringe</p>
+                    </div>
+                </a>
+
+            </div>
+
+            <div class="footer_box">
+                <p>kontakt@icmidtfyn.dk</p>
+                <p>(+45) 62 62 21 51</p>
+            </div>
+
+            <div class="footer_box2">
+                <a href="https://www.facebook.com/ICMIDTFYN/?locale=da_DK" target="_blank"
+                    rel="noopener noreferrer"><img id="facebook" src="img/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/idraetscenter_midtfyn/" target="_blank"
+                    rel="noopener noreferrer"><img id="instagram" src="img/instagram.png" alt="instagram"></a>
+
+            </div>
+        </section>
     </footer>
 
     <script src="javascript/login.js"></script>
