--- a/fitness.html
+++ b/fitness.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="css/fitness.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/footer.css">
+
     <title>Fitness - Idrætscenter Midtfyn</title>
 </head>
 
