--- a/omidraetscenter.html
+++ b/omidraetscenter.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/omidraetscenter.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Om Idrætscenter - Idrætscenter Midtfyn</title>
 </head>
 
@@ -273,6 +274,32 @@
     </main>
 
     <footer>
+        <section class="footer">
+            <div>
+                <a href="https://www.google.com/maps/place/S%C3%B8vej+34,+5750+Ringe/@55.2412148,10.4633833,2125m/data=!3m2!1e3!4b1!4m6!3m5!1s0x464d25e80744cb5b:0xbead35b71a7fe716!8m2!3d55.241203!4d10.473683!16s%2Fg%2F11nnv8gs39?entry=ttu&g_ep=EgoyMDI1MTIwOC4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank" rel="noopener noreferrer" class="footer_box" id="footer_link">
+                    <img src="img/maps.webp" alt="Google Maps icon">
+                    <div>
+                        <p>Søvej 34</p>
+                        <p>5750 Ringe</p>
+                    </div>
+                </a>
+
+            </div>
+
+            <div class="footer_box">
+                <p>kontakt@icmidtfyn.dk</p>
+                <p>(+45) 62 62 21 51</p>
+            </div>
+
+            <div class="footer_box2">
+                <a href="https://www.facebook.com/ICMIDTFYN/?locale=da_DK" target="_blank"
+                    rel="noopener noreferrer"><img id="facebook" src="img/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/idraetscenter_midtfyn/" target="_blank"
+                    rel="noopener noreferrer"><img id="instagram" src="img/instagram.png" alt="instagram"></a>
+
+            </div>
+        </section>
     </footer>
     <script src="javascript/login.js"></script>
 </body>
