--- a/omidraetscenter.html
+++ b/omidraetscenter.html
@@ -262,9 +262,10 @@
                         <P>Åbent alle hverdage kl. 8.00 – 13.00 og kl. 16.00 - 20.00
                             Weekend, helligdage og i skolernes ferier efter behov.
 
-                        <div class="bold">OBS! LUKKET i perioden mandag, den 22. december 2025 - fredag, 2. januar 2026.
+                        <div class="bold">
+                            <p>OBS! LUKKET i perioden mandag, den 22. december 2025 - fredag, 2. januar 2026.</p>
                         </div>
-                        </P>
+
                     </div>
                 </div>
             </div>
@@ -299,7 +300,26 @@
                     rel="noopener noreferrer"><img id="instagram" src="img/instagram.png" alt="instagram"></a>
 
             </div>
+
         </section>
+
+
+        <form action="/submit-newsletter" method="POST">
+            <div>
+
+                <p>Tilmeld dig vores nyhedsbrev</p>
+            </div>
+
+            <div>
+                <input type="email" id="email" name="email" placeholder="E-mail" required />
+            </div>
+            <div>
+
+                <button type="submit">Tilmeld</button>
+            </div>
+
+        </form>
+
     </footer>
     <script src="javascript/login.js"></script>
 </body>
